ADD: gui: github link on about page

--- a/gui/pages/about.html
+++ b/gui/pages/about.html
@@ -1,5 +1,5 @@
 <h1 class="page-header">About <i>MAMID</i></h1>
-
+<h3><a href="https://github.com/KIT-MAMID/MAMID" target="_blank">MAMID on GitHub</a></h3>
 <p><i>MAMID</i> is licensed under the MIT License.</p>
 <div class="well well-lg">
     MIT License<br/><br/>
