FIX: GUI: mssing <code> blocks in callouts

--- a/gui/pages/replicaset.html
+++ b/gui/pages/replicaset.html
@@ -10,7 +10,7 @@
 </div>
 
 <div class="bs-callout bs-callout-active" ng-if="!is_create_view && !problemsByReplicaSet[replicaset.id]">
-    <h4><span class="glyphicon glyphicon-cloud" aria-hidden="true"></span> {{ replicaset.name }} is working.</h4>
+    <h4><span class="glyphicon glyphicon-cloud" aria-hidden="true"></span> <code>{{ replicaset.name }}</code> is working.</h4>
 </div>
 <div class="panel panel-default" ng-if="!is_create_view">
     <div class="panel-heading">
