ADD: master/api/db/gui: description for a slave

--- a/gui/pages/slave.html
+++ b/gui/pages/slave.html
@@ -96,6 +96,13 @@
                             </select>
                         </td>
                     </tr>
+                    <tr>
+                        <th>Description
+                        </th>
+                        <td colspan="3">
+                            <textarea ng-model="edit_slave.description" placeholder="A descrptive text, notes, ..."></textarea>
+                        </td>
+                    </tr>
                 </table>
                 <button type="submit"
                         class="btn btn-primary pull-right" ng-if="!is_create_view">
